# rag-builder

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dedicated_Hosted_Knowledge_Service_Guide.docx  LICENSE  Makefile  RAG_Builder_Refined_Implementation_Roadmap.docx  README.md  SECURITY.md  alembic.ini  build_product_service_guide.py  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: architecture.mdc  project-context.mdc
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  worker.py
backend/app/: __init__.py  __main__.py  main.py
backend/app/api/: __init__.py  health.py  metrics.py
backend/app/cli/: __init__.py  __main__.py  doctor_cli.py  reindex_cli.py
backend/app/composition/: __init__.py  audit.py  evaluation.py  jobs.py  orm_registry.py  retrieval.py  webhooks.py
backend/app/core/: __init__.py  auth_config_validation.py  config.py  exceptions.py  (+4 more)
backend/requirements/: base.txt  dev.txt  ocr.txt
docs/: Platform-at-a-glance.md  platform-integration-guide.md
docs/api/: README.md  conversation_api.md  evaluation_api.md  index_lifecycle_api.md  jobs_api.md  knowledge.md  knowledge_api.md  operator_api.md  organization_api.md  project_api.md  projects.md  retrieval_api.md  system_api.md  versioning-and-errors.md  webhooks_api.md
docs/architecture/: README.md  background-processing.md  configuration-architecture.md  deployment-architecture.md  domain-ownership.md  module-architecture.md  provider-architecture.md  rag-runtime-flows.md  system-architecture.md
docs/features/: README.md  conversation_module.md  evidence_quality.md  hosted-integration-commercial-delivery.md  jobs_module.md  knowledge.md  knowledge_module.md  multilingual_support.md  operator_console.md  organization_module.md  production_runtime_and_operator_backend.md  project_module.md  projects.md  retrieval.md  retrieval_module.md  safe_corpus_index_lifecycle.md
docs/learning/: README.md  application-factory-and-fastapi.md  configuration-system.md  conversation_llm_providers.md  conversation_memory.md  conversation_provider_integration.md  conversation_rag_journey.md  conversation_rag_prompting.md  conversation_sse_streaming.md  database-and-migrations.md  docker-local-development.md  document-parsing-and-extraction.md  embeddings-fundamentals.md  entity-lifecycle-and-reusability.md  foundation-sprint-overview.md  hybrid-retrieval-journey.md  knowledge-ingestion-journey.md  multilingual-text-processing.md  object-storage-for-rag.md  ocr-fundamentals.md  organization-api-key-auth-journey.md  pgvector-operations-runbook.md  rag-from-zero.md  semantic-search-for-rag.md  structured-logging.md  testing-strategy.md  text-chunking-for-rag.md  vector-storage-and-pgvector.md  vector-storage-and-qdrant.md
docs/operations/: commercial-decisions.md  dedicated-onboarding.md
docs/plans/: README.md  conversation_module_plan.md  dedicated-hosted-service-implementation-roadmap.md  knowledge-module.md  organization_auth_module_plan.md  pgvector_migration_plan.md  project_module_plan.md  projects-module.md  retrieval-module.md  retrieval_module_plan.md
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi-schema.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: generate_openapi_schema.py
frontend/src/: main.tsx
infra/: README.md
infra/hosted/: RUNBOOK.md  compose.yaml  gateway.conf  hostedctl.py  release.env.example
requirements/: base.txt  prod.txt
scripts/: README.md  check_migrations.py  webhook_receiver.py
tests/: conftest.py
tests/architecture/: test_import_boundaries.py
tests/benchmarks/: pgvector_corpus.json  test_pgvector_retrieval_benchmark.py
tests/evaluation/: __init__.py  test_ci_smoke.py
tests/integration/: knowledge_helpers.py  test_auth_api.py  test_conversations_api.py  test_documents_api.py  test_evaluations_api.py  test_health_endpoints.py  test_index_lifecycle_api.py  test_jobs_api.py  test_operator_api.py  test_projects_api.py  test_retrieval_api.py  test_webhooks_api.py
tests/unit/: test_config.py  test_logging.py  test_schemas.py
(+460 files in other folders)
