# ===========================================================================
# AI Platform Engine (APE) - Project metadata & tooling configuration
# ---------------------------------------------------------------------------
# Runtime/dev dependencies are managed with pip via the `requirements/`
# directory (see requirements/base.txt, dev.txt, prod.txt). This file holds
# project metadata and the configuration for all developer tooling
# (Ruff, Pytest, Mypy, Coverage) so every tool reads from one place.
# ===========================================================================

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-engine"
version = "0.1.0"
description = "AI Platform Engine (APE) - a deployable, provider-agnostic AI infrastructure platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AI Platform Engine Team" }]
keywords = ["ai", "platform", "rag", "fastapi", "llm", "vector-search"]

# Runtime dependencies are intentionally managed in requirements/ (pip workflow).
# Keeping them out of [project.dependencies] avoids version drift between the
# two sources of truth.
dependencies = []

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff - linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend", "tests"]
extend-exclude = [".venv", "backend/app/db/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async
    "T20",  # flake8-print (no stray prints)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "B008",  # function calls in argument defaults (FastAPI Depends pattern)
    "N818",  # exception names need not end in "Error"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T20"]
"backend/app/db/migrations/env.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --strict-config"
markers = [
    "unit: fast, isolated tests with no external dependencies",
    "integration: tests that require external services (db, redis, qdrant)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
branch = true
omit = ["backend/app/db/migrations/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Mypy - type checking (preparation; gradually tighten over time)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
packages = ["app"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["qdrant_client.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
